--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,15 @@
             <artifactId>regurgitator-extensions-web-json</artifactId>
             <version>0.0.1</version>
         </dependency>
+		<dependency>
+            <groupId>com.emarte.regurgitator</groupId>
+            <artifactId>regurgitator-extensions-mq-xml</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.emarte.regurgitator</groupId>
+            <artifactId>regurgitator-extensions-mq-json</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 </project>
