--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     <name>Regurgitator All</name>
 
     <properties>
-         <maven.compiler.source>1.6</maven.compiler.source>
-           <maven.compiler.target>1.6</maven.compiler.target>
-               <github.global.server>github</github.global.server>
-       </properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <github.global.server>github</github.global.server>
+    </properties>
 
     <repositories>
         <repository>
@@ -23,47 +23,50 @@
         </repository>
     </repositories>
 
-       <distributionManagement>
-           <repository>
-               <id>internal.repo</id>
-               <name>Temporary Staging Repository</name>
-               <url>file:///tmp/regurgitator-mvn-repo</url>
-           </repository>
-       </distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file:///tmp/regurgitator-mvn-repo</url>
+        </repository>
+    </distributionManagement>
 
-       <build>
-           <plugins>
-               <plugin>
-                   <artifactId>maven-deploy-plugin</artifactId>
-                   <version>2.8.1</version>
-                   <configuration>
-                       <altDeploymentRepository>internal.repo::default::file:///tmp/regurgitator-mvn-repo</altDeploymentRepository>
-                   </configuration>
-               </plugin>
-               <plugin>
-                   <groupId>com.github.github</groupId>
-                   <artifactId>site-maven-plugin</artifactId>
-                   <version>0.11</version>
-                   <configuration>
-                       <message>Maven artifacts for ${project.version}</message>
-                       <noJekyll>true</noJekyll>
-                       <outputDirectory>/tmp/regurgitator-mvn-repo</outputDirectory>
-                       <branch>refs/heads/mvn-repo</branch>
-                       <includes><include>**/*</include></includes>
-                       <repositoryName>regurgitator-binaries</repositoryName>
-                       <repositoryOwner>talmeym</repositoryOwner>
-                   </configuration>
-                   <executions>
-                     <execution>
-                       <goals>
-                         <goal>site</goal>
-                       </goals>
-                       <phase>deploy</phase>
-                     </execution>
-                   </executions>
-               </plugin>
-           </plugins>
-       </build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file:///tmp/regurgitator-mvn-repo
+                    </altDeploymentRepository>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.11</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <outputDirectory>/tmp/regurgitator-mvn-repo</outputDirectory>
+                    <branch>refs/heads/mvn-repo</branch>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryName>regurgitator-binaries</repositoryName>
+                    <repositoryOwner>talmeym</repositoryOwner>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
