--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
         </dependency>
         <dependency>
             <groupId>com.emarte.regurgitator</groupId>
+            <artifactId>regurgitator-extensions-jetty</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-mq-xml</artifactId>
             <version>0.0.1</version>
         </dependency>
