--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.emarte.regurgitator</groupId>
     <artifactId>regurgitator-all</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
     <packaging>jar</packaging>
     <name>Regurgitator All</name>
 
@@ -112,52 +112,52 @@
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-xml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-json</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-yml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-web-xml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-web-json</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-web-yml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-jetty</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-mq-xml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-mq-json</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
         <dependency>
             <groupId>uk.emarte.regurgitator</groupId>
             <artifactId>regurgitator-extensions-mq-yml</artifactId>
-            <version>0.1.1</version>
+            <version>[0.1.1,0.2.0)</version>
         </dependency>
     </dependencies>
 </project>
